# rone-plugins

./: .gitignore  .gitmodules  BETA_EMAIL_TEMPLATE.md  BETA_FEEDBACK_FORM.md  BETA_README.md  versions.json
.github/workflows/: main.yml
RonePluginsCenter/: CMakeLists.txt
RonePluginsCenter/Resources/ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
RonePluginsCenter/Resources/ui/src/: App.jsx  bridge.js  index.css  logo.js
RonePluginsCenter/Resources/ui/src/components/: AccountPanel.jsx  ConfirmDialog.jsx  ErrorBoundary.jsx  FeaturedSection.jsx  FilterBar.jsx  FormatBadge.jsx  Header.jsx  InfoModal.jsx  LicenseBar.jsx  PluginCard.jsx  PluginGrid.jsx  ProgressBar.jsx  SettingsPanel.jsx  Sidebar.jsx  SkeletonCard.jsx  StatusToast.jsx  TopBar.jsx
RonePluginsCenter/Source/: LicenseHandler.cpp  LicenseHandler.h  Main.cpp  MainComponent.cpp  MainComponent.h  NetworkManager.cpp  NetworkManager.h  PluginCard.cpp  PluginCard.h  RoneTrayIcon.h  Styles.h  VersionChecker.cpp  VersionChecker.h
RonePluginsCenter/build-test/: Makefile
Shared/: BundleLicenseChecker.h  RoneAboutOverlay.h
installer/: RONE_Plugins.iss  ReverseReverb.iss  RoneFlanger.iss  RoneStemsFixer.iss  RoneStutter.iss  RoneSyncVerb.iss
